--- a/8.1/Dockerfile
+++ b/8.1/Dockerfile
@@ -29,6 +29,18 @@ RUN set -xe && \
             docker-php-ext-enable \
                 swoole \
         && \
+            pecl install \
+                redis \
+        && \
+            docker-php-ext-enable \
+                redis \
+        && \
+            pecl install \
+                mongodb \
+        && \
+            docker-php-ext-enable \
+                mongodb \
+        && \
             apt-get remove --purge -y ${BUILD_DEPS} && \
             apt-get autoremove --purge -y && \
             rm -r /var/lib/apt/lists/* && \
