--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -25,25 +25,13 @@ RUN set -xe && \
                 pdo_sqlite \
         && \
             pecl install \
-                mongodb \
-                redis \
+                mongodb-1.12.0 \
+                redis-5.3.6 \
+                swoole-4.8.6 \
+        && \
+            docker-php-ext-enable \
                 swoole \
-        && \
-            docker-php-ext-enable \
-                mongodb \
                 redis \
-                swoole \
-        && \
-            pecl install \
-                redis \
-        && \
-            docker-php-ext-enable \
-                redis \
-        && \
-            pecl install \
-                mongodb \
-        && \
-            docker-php-ext-enable \
                 mongodb \
         && \
             apt-get remove --purge -y ${BUILD_DEPS} && \
