指定 swoole, redis, mongodb 版本 (#3)
* add redis and mongodb

* add specific version

* adjust the order

Co-authored-by: harry.lu[呂浩宇] <harry.lu@104.com.tw>

--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -25,9 +25,9 @@ RUN set -xe && \
                 pdo_sqlite \
         && \
             pecl install \
-                mongodb \
-                redis \
-                swoole \
+                mongodb-1.12.0 \
+                redis-5.3.6 \
+                swoole-4.8.6 \
         && \
             docker-php-ext-enable \
                 mongodb \
